[FEAT]#47 add ApiResponse in AuthController.java